# slacky

./: .gitignore  Dockerfile  README.md  pyproject.toml  slacky.py  test_slacky.py
.github/workflows/: docker-build.yaml  docker-build.yml
ansible-deployment/: README.md  inventory.ini
ansible-deployment/group_vars/: all.yaml
ansible-deployment/roles/slackbot-app/: main.yaml
ansible-deployment/roles/slackbot-app/templates/: slackbot_app.service.ini.j2  slacky.ini.j2
config/: slacky.ini
slacky/: main.py
